--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
     <div>
       <header>
         <h1>
-          TechBlog
+          Tech Blog CampFire
         </h1>
         <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
           <div class="container-fluid">
