--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,6 +28,7 @@
             {{#if logged_in}}
 
               <a href="../updateDelete">My Blogs</a>
+              <a href="../logout">Logout</a>
 
             {{else}}
 
