--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,10 +8,12 @@
             </div>
             <div class="card-text">
             <label for="loginPassword">Password:</label>
-            <input type="text" placeholder="PASSWORD" id="loginPassword">
+            <input type="password" placeholder="PASSWORD" id="loginPassword">
             </div>
             <button type="submit" class="btn btn-dark">Login!</button><br>
             <a href="/signup">Signup</a>
         </form>
     </div>
 </section>
+
+<script src="/js/login.js"></script>
