--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -24,7 +24,7 @@
       <input id="hiddenCommentId" hidden="true" value="{{blog.id}}"></input>
       <textarea id="comment" placeholder="Type your comment here..."></textarea>
     </div>
-    <button id="create">Submit</button>
+    <button class="btn btn-dark" id="create">Submit</button>
 </form>
 </div>
 </section>
