--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -22,11 +22,11 @@
       <label for="content">Content</label>
     <textarea id="content" placeholder="content"></textarea>
     </div>
-    <button id="create">Create</button>
+    <button class="btn btn-dark" id="create">Create</button>
 </form>
 </div>
 </section>
 <form id="newpost">
-    <button>+ New Post</button>
+    <button class="btn btn-dark">+ New Post</button>
 </form>
 <script src="/js/dashboard.js"></script>
